@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" simultaneous="4" verbose="0" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" session_check="10" poker_network_version="1.7.0">
+<server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" max_joined="1000" simultaneous="4" verbose="0" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" session_check="10" poker_network_version="1.7.0">
 
   <delays autodeal_tournament_min="15" autodeal="18" autodeal_max="120" autodeal_check="15" round="12" position="60" showdown="30" finish="18" messages="60" breaks_check="30"/>
   
