@@ -1,3 +1,11 @@
+2008-08-16  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* pokernetwork/pokerservice.py (PokerService.__init__): Added
+	max_joined instance variable from the /server/@max_joined setting.
+
+	* tests/test-pokerservice.py.in
+	(MonitorTestCase.test00_configValues): Wrote test.
+
 2008-08-16  Loic Dachary <loic@dachary.org>
 
  	* Release 1.7.0
